Add logo, change texts, add buttons

--- a/index.html
+++ b/index.html
@@ -29,24 +29,26 @@
       <a href="#">Контакты</a>
     </li>
   </ul>
-  <div class="btn request-btn">
-    Оставить заявку
-  </div>
+  <button class="btn request-btn">
+    <p>Оставить заявку</p>
+  </button>
 </aside>
 
 <header class="main-header">
 
-  <div class="contacts-top -fixed">
+  <div class="contacts-top">
     <div class="container">
-      <div class="logo">[]</div>
+      <div class="logo">
+        <img src="assets/public/imgs/logo.png" alt="logo">
+      </div>
 
       <div class="contacts">
         <div class="phone">
           +555-555-55
         </div>
-        <div class="btn request-btn">
-          Оставить заявку
-        </div>
+        <button class="btn request-btn">
+          <p>Оставить заявку</p>
+        </button>
       </div>
     </div>
   </div>
@@ -56,7 +58,7 @@
       <div class="slider-caption">
 
         <h1 class="main-title">
-          Lorem ipsum
+          ОБСЛУЖИВАЕМ САЙТЫ
         </h1>
 
         <h5 class="details">
@@ -68,9 +70,9 @@
           <b>Удобная пакетная программа</b>
         </h4>
 
-        <div class="btn details-btn">
-          Посмотреть программу
-        </div>
+        <button class="btn details-btn">
+          <p>Выбрать программу</p>
+        </button>
 
       </div>
     </div>
